--- a/source/less/blocks/choice-block.less
+++ b/source/less/blocks/choice-block.less
@@ -62,3 +62,12 @@
     content: "";
   }
 }
+
+@media (min-width: @desktop-width) {
+  .choice-block {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: stretch;
+  }
+}
