--- a/source/less/blocks/hero-block.less
+++ b/source/less/blocks/hero-block.less
@@ -1,6 +1,6 @@
 .hero-block {
-  background-image: url("../../img/text-index.svg"),
-    url("../../img/back-mobile-2x.jpg");
+  background-image: url("../img/text-index.svg"),
+    url("../img/back-desktop.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-color: #808080;
@@ -10,7 +10,7 @@
 }
 
 .hero-block__img {
-  background-image: url("../../img/intro-triangle-hero.svg");
+  background-image: url("../img/intro-triangle-hero.svg");
   background-repeat: no-repeat;
   background-position: center bottom;
   height: 389px;
