--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -14,6 +14,7 @@
   line-height: 26px;
   font-weight: 700;
   min-width: 248px;
+  width: auto;
   background-color: #f2f2f2;
   color: rgba(0, 0, 0, 0.3);
   border: none;
@@ -55,5 +56,11 @@
   .input__input--area {
     min-width: 616px;
     height: 128px;
+  }
+
+  @media (min-width: @desktop-width) {
+    .input__input {
+      width: auto;
+    }
   }
 }
