--- a/source/less/blocks/choice-block.less
+++ b/source/less/blocks/choice-block.less
@@ -68,6 +68,6 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    align-content: stretch;
+    min-width: auto;
   }
 }
