--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -29,7 +29,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: stretch;
   row-gap: 16px;
 }
 
@@ -162,7 +162,8 @@
     max-width: 960px;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: flex-start;
     flex-wrap: wrap;
     row-gap: 56px;
   }
@@ -175,7 +176,7 @@
     appearance: none;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     box-sizing: border-box;
     flex-grow: 1;
@@ -184,10 +185,12 @@
 
   .form-feedback__block--name {
     max-width: 430px;
+    align-items: stretch;
   }
 
   .form-feedback__block--contact {
     max-width: 402px;
+    align-items: stretch;
   }
 
   .form-feedback__separator {
@@ -205,17 +208,35 @@
 
   .form-feedback__title-block {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 28px;
-    max-width: 960px;
+    min-width: 960px;
   }
 
   .form-feedback__list--radio {
     max-width: 960px;
+    margin: 0 53px;
+    column-gap: 28px;
+    padding: 17px 0;
   }
 
   .form-feedback__list--check {
     max-width: 960px;
+    column-gap: 64px;
+    padding: 31px 0;
+  }
+
+  .form-block--impression {
+    max-width: 960px;
+  }
+
+  .form-feedback__block-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 768px;
+    margin: 0;
   }
 }
