--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -57,10 +57,19 @@
     min-width: 616px;
     height: 128px;
   }
+}
 
-  @media (min-width: @desktop-width) {
-    .input__input {
-      width: auto;
-    }
+@media (min-width: @desktop-width) {
+  .input__input {
+    width: auto;
+  }
+
+  .input__input--area {
+    min-width: 768px;
+    height: 160px;
+  }
+
+  .input__input--with-icon {
+    flex-grow: 1;
   }
 }
