--- a/source/less/blocks/choice-block.less
+++ b/source/less/blocks/choice-block.less
@@ -21,8 +21,8 @@
   background-color: #f2f2f2;
   border: none;
   border-radius: 50%;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  -webkit-appearance: none; /* stylelint-disable-line */
+  -moz-appearance: none; /* stylelint-disable-line */
   appearance: none;
 
   &:checked::after {
@@ -46,8 +46,8 @@
   background-color: #f2f2f2;
   border: none;
   border-radius: 4px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+  -webkit-appearance: none; /* stylelint-disable-line */
+  -moz-appearance: none; /* stylelint-disable-line */
   appearance: none;
 
   &:checked::after {
