--- a/source/less/blocks/contact-map.less
+++ b/source/less/blocks/contact-map.less
@@ -1,8 +1,11 @@
 .contact-map {
   min-width: 320px;
   height: 350px;
-  background-image: url("../../img/map-mobile.png");
-  background-repeat: no-repeat;
   background-color: #808080;
-  background-position: center;
+  display: block;
+}
+
+.contact-map iframe {
+  min-width: 320px;
+  height: 350px;
 }
