--- a/source/less/blocks/video-block.less
+++ b/source/less/blocks/video-block.less
@@ -1,3 +1,10 @@
+.video-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .video-block__wrapper {
   padding-top: 17px;
   padding-bottom: 38px;
@@ -18,6 +25,15 @@
   padding: 0;
   margin: 0;
   text-align: center;
+}
+
+.video-block__video {
+  background-image: url("../img/video-mobile.jpg");
+  background-repeat: no-repeat;
+  width: 280px;
+  height: 177px;
+  background-color: #808080;
+  margin: 0 20px;
 }
 
 @media (min-width: @tablet-width) {
