вноситизменения в разметку меню

--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -6,6 +6,14 @@
   padding: 0;
 }
 
+@media (min-width: @tablet-width) {
+  .main-container {
+    min-width: 768px;
+    width: auto;
+    margin: 0 auto;
+  }
+}
+
 @media (min-width: @desktop-width) {
   .main-container {
     width: 1200px;
