--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -48,12 +48,14 @@
   &--img {
     padding: 0;
     max-height: 260px;
+    background-color: #d3d3d3;
   }
 
   &--icon {
     display: flex;
     justify-content: flex-start;
     padding: 12px 18px;
+    background-color: #ffffff;
   }
 
   &--gray {
@@ -88,10 +90,14 @@
   margin-right: 7px;
 }
 
+br {
+  display: none;
+}
+
 @media (min-width: @tablet-width) {
   .advantages {
     width: auto;
-    align-items: stretch;
+    align-items: center;
   }
 
   .advantages__list {
@@ -100,7 +106,7 @@
     align-items: center;
     flex-basis: auto;
     flex-wrap: wrap;
-    max-width: 768px;
+    min-width: 768px;
   }
 
   .advantages__item {
@@ -109,13 +115,15 @@
 
   .advantages__item--with-img {
     padding: 42px 33px;
-    max-width: 190px;
-    min-height: 173px;
+    max-width: 30%;
+    min-height: 256px;
+    box-sizing: border-box;
   }
 
   .advantages__item--img {
     padding: 0;
-    max-width: 512px;
+    min-width: 512px;
+    height: 256px;
   }
 
   .advantages__item--icon {
