--- a/source/less/blocks/prologue.less
+++ b/source/less/blocks/prologue.less
@@ -2,6 +2,7 @@
   width: auto;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .prologue__content {
@@ -22,6 +23,10 @@
 
   .prologue__content {
     padding: 48px 124px 56px 124px;
-    min-width: 520px;
+    max-width: 520px;
+  }
+
+  br {
+    display: none;
   }
 }
