--- a/source/less/blocks/video-block.less
+++ b/source/less/blocks/video-block.less
@@ -43,4 +43,18 @@
     margin: 0 auto;
     max-width: 648px;
   }
+
+  .video-block__video {
+    width: 648px;
+    height: 500px;
+    background-size: cover;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .video-block__video {
+    width: 800px;
+    height: 500px;
+    background-size: cover;
+  }
 }
