--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -47,7 +47,8 @@
 
   &--img {
     padding: 0;
-    max-height: 260px;
+    width: auto;
+    height: 260px;
     background-color: #d3d3d3;
   }
 
@@ -69,14 +70,14 @@
   }
 }
 
+.advantages__image {
+  height: auto;
+  object-fit: contain;
+}
+
 .advantages__separator {
   margin: 24px auto;
   border-bottom: 1px #d6d6d6 solid;
-}
-
-.advantages__image {
-  padding: 0;
-  margin: 0;
 }
 
 .advantages__item-text {
@@ -124,6 +125,7 @@ br {
     padding: 0;
     min-width: 512px;
     height: 256px;
+    object-fit: cover;
   }
 
   .advantages__item--icon {
