--- a/source/less/blocks/hero-block.less
+++ b/source/less/blocks/hero-block.less
@@ -1,28 +1,58 @@
 .hero-block {
-  background-image: url("../img/text-index.svg"),
-    url("../img/back-desktop.png");
+  background-image: url("../img/back-mobile-hero.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   background-color: #808080;
   min-width: 320px;
   min-height: 389px;
-  background-size: contain cover;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+@media (min-resolution: 2dppx) {
+  background-image: url("../img/back-mobile-hero@2x.jpg");
+}
+
+.hero-block__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .hero-block__img {
   background-image: url("../img/intro-triangle-hero.svg");
   background-repeat: no-repeat;
   background-position: center bottom;
-  height: 389px;
+  height: 57px;
 }
 
 @media (min-width: @tablet-width) {
   .hero-block {
     min-width: 768px;
-    min-height: 518px;
+    height: 518px;
+    background-image: url("../img/back-tablet-hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 
-  .hero-block__img {
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/back-tablet-hero@2x.jpg");
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .hero-block {
+    min-width: 768px;
     height: 518px;
+    background-image: url("../img/back-desktop-hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("../img/back-desktop-hero@2x.jpg");
   }
 }
