--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,17 +1,16 @@
 .advantages {
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
   width: auto;
-  align-items: stretch;
 }
 
 .advantages__list {
   background-color: #ffffff;
   margin: 0;
   padding: 0;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
 
   &--gray {
     background-color: #eeeeee;
@@ -41,13 +40,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
     min-height: 117px;
     padding: 37px 18px;
   }
 
   &--img {
     padding: 0;
-    width: auto;
+    min-width: 320px;
     height: 260px;
     background-color: #d3d3d3;
   }
@@ -71,8 +71,8 @@
 }
 
 .advantages__image {
-  height: auto;
-  object-fit: contain;
+  width: 100%;
+  object-fit: cover;
 }
 
 .advantages__separator {
@@ -98,14 +98,13 @@ br {
 @media (min-width: @tablet-width) {
   .advantages {
     width: auto;
-    align-items: center;
   }
 
   .advantages__list {
     display: flex;
+    flex-direction: row;
     justify-content: flex-start;
-    align-items: center;
-    flex-basis: auto;
+    align-items: stretch;
     flex-wrap: wrap;
     min-width: 768px;
   }
@@ -114,18 +113,22 @@ br {
     flex-grow: 1;
   }
 
-  .advantages__item--with-img {
-    padding: 42px 33px;
-    max-width: 30%;
-    min-height: 256px;
-    box-sizing: border-box;
+  .advantages__item--img {
+    min-width: 512px;
+    max-width: 67%;
+    height: 256px;
   }
 
-  .advantages__item--img {
-    padding: 0;
-    min-width: 512px;
-    height: 256px;
+  .advantages__image {
+    width: 100%;
     object-fit: cover;
+  }
+
+  .advantages__item--with-img {
+    padding: 42px 33px;
+    max-width: 33%;
+    min-height: 172px;
+    box-sizing: border-box;
   }
 
   .advantages__item--icon {
@@ -134,7 +137,8 @@ br {
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 190px;
+    width: 33%;
+    box-sizing: border-box;
     min-height: 210px;
   }
 
@@ -152,13 +156,17 @@ br {
 
   .advantages__item--gray {
     width: 190px;
-    min-height: 256px;
+    min-height: 152px;
     padding: 52px 33px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     border-bottom: none;
+  }
+
+  .advantages__list:nth-child(6) {
+    order: 7;
   }
 }
 
@@ -169,7 +177,7 @@ br {
 
   .advantages__item--with-img {
     padding: 52px 50px 51px 50px;
-    max-width: 300px;
+    max-width: 33%;
     min-height: 153px;
   }
 
