--- a/source/less/blocks/hero-block-inner.less
+++ b/source/less/blocks/hero-block-inner.less
@@ -1,38 +1,48 @@
 .hero-block-inner {
-  background-image: url("../img/sedona_hero.svg"),
-    url("../img/back-desktop-inner.png");
+  background-image: url("../img/back-mobile-hero2.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: bottom;
+  background-size: cover;
   background-color: #808080;
   min-width: 320px;
   min-height: 158px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+@media (min-resolution: 2dppx) {
+  background-image: url("../img/back-mobile-hero2@2x.jpg");
 }
 
 .hero-block-inner__img {
   background-image: url("../img/intro-triangle-hero.svg");
   background-repeat: no-repeat;
   background-position: center bottom;
-  height: 158px;
+  height: 57px;
+}
+
+.hero-block-inner__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 @media (min-width: @tablet-width) {
   .hero-block-inner {
+    background-image: url("../img/back-tablet-hero.jpg");
+    background-size: cover;
     min-width: 768px;
     min-height: 290px;
-  }
-
-  .hero-block-inner__img {
-    height: 290px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .hero-block-inner {
+    background-image: url("../img/back-desktop-hero.jpg");
+    background-size: cover;
     min-width: 1200px;
     min-height: 300px;
-  }
-
-  .hero-block-inner__img {
-    height: 300px;
   }
 }
