Добавляет изображения в webp

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -145,6 +145,8 @@ br {
   .advantages__icon {
     margin-right: 0;
     margin-bottom: 26px;
+    width: 80px;
+    height: 80px;
   }
 
   .advantages__list--gray {
