--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -65,6 +65,7 @@
   .form-feedback__wrapper {
     margin: 0 auto;
     padding: 0;
+    padding-bottom: 64px;
     max-width: 648px;
     display: flex;
     flex-direction: row;
@@ -159,6 +160,7 @@
   .form-feedback__wrapper {
     margin: 0 auto;
     padding: 0;
+    padding-bottom: 64px;
     max-width: 960px;
     display: flex;
     flex-direction: row;
@@ -215,16 +217,22 @@
   }
 
   .form-feedback__list--radio {
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
     max-width: 960px;
     margin: 0 53px;
     column-gap: 28px;
+    row-gap: 28px;
     padding: 17px 0;
   }
 
   .form-feedback__list--check {
     max-width: 960px;
     column-gap: 64px;
+    row-gap: 28px;
     padding: 31px 0;
+    margin: 0 45px;
   }
 
   .form-block--impression {
