Добавляет фавиконки и добавляет состояния элементов

--- a/source/less/blocks/button-primary.less
+++ b/source/less/blocks/button-primary.less
@@ -13,3 +13,19 @@
   padding-bottom: 16px;
   min-width: 284px;
 }
+
+.button-primary:active {
+  background-color: #5496bd;
+  color: rgba(225, 225, 255, 0.3);
+}
+
+.button-primary:disabled {
+  background-color: #e5e5e5;
+  color: #ffffff;
+}
+
+@media (min-width: @desktop-width) {
+  .button-primary:hover {
+    background-color: #669ec0;
+  }
+}
