--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -13,3 +13,13 @@
   color: #000000;
   margin-right: 12px;
 }
+
+@media (min-width: @desktop-width) {
+  .copyright__link:hover {
+    fill: #81b3d2;
+  }
+
+  .copyright__text:hover {
+    color: #81b3d2;
+  }
+}
