--- a/source/less/blocks/social-network.less
+++ b/source/less/blocks/social-network.less
@@ -14,8 +14,16 @@
   background-color: #81b3d2;
 }
 
+.social-network__item:active {
+  background-color: #549ebd;
+}
+
 .social-network__icon {
   fill: #ffffff;
+}
+
+.social-network__icon:active {
+  fill: rgba(225, 225, 255, 0.3);
 }
 
 .social-network__link {
@@ -24,4 +32,10 @@
   align-items: center;
   width: 24px;
   height: 24px;
+}
+
+@media (min-width: @desktop-width) {
+  .social-network__item:hover {
+    background-color: #669ec0;
+  }
 }
