--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -27,6 +27,10 @@
 }
 
 @media (min-width: @tablet-width) {
+  .main-header {
+    background-color: rgb(255, 255, 255);
+  }
+
   .main-header__wrapper {
     min-width: 768px;
     height: 56px;
@@ -54,6 +58,7 @@
 
 @media (min-width: @desktop-width) {
   .main-header {
+    background-color: rgb(255, 255, 255);
     width: 1200px;
     margin: 0 auto;
   }
