Изменения состояний элементов

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -12,16 +12,17 @@
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  color: #000000;
   margin-right: 12px;
 }
 
 @media (min-width: @desktop-width) {
   .copyright__link:hover {
     fill: #81b3d2;
+    color: #81b3d2;
   }
 
-  .copyright__text:hover {
-    color: #81b3d2;
+  .copyright__link:active {
+    fill: #b3b3b3;
+    color: #b3b3b3;
   }
 }
