--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -61,6 +61,10 @@
   display: none;
 }
 
+.form-feedback__button {
+  width: 248px;
+}
+
 @media (min-width: @tablet-width) {
   .form-feedback__wrapper {
     margin: 0 auto;
@@ -133,10 +137,6 @@
     margin: 0;
   }
 
-  .form-feedback__button {
-    width: 50%;
-  }
-
   .form-feedback__title-block {
     display: flex;
     justify-content: space-between;
@@ -153,6 +153,10 @@
     list-style-type: none;
     margin-bottom: 0;
     flex-grow: 1;
+  }
+
+  .form-feedback__button {
+    width: 50%;
   }
 }
 
