--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -193,6 +193,10 @@
     background-image: none;
   }
 
+  .main-nav__item:hover {
+    background-color: #ffffff;
+  }
+
   .main-nav-link--active {
     color: #766357;
   }
