--- a/source/less/blocks/button-primary.less
+++ b/source/less/blocks/button-primary.less
@@ -8,10 +8,8 @@
   text-transform: uppercase;
   text-align: center;
   border: none;
-  padding: 0;
-  padding-top: 16px;
-  padding-bottom: 16px;
-  min-width: 284px;
+  padding: 16px;
+  text-decoration: none;
 }
 
 .button-primary:active {
