Вносит изменения в разметку

--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -45,10 +45,12 @@
 .form-feedback__block-button {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: flex-start;
+  gap: 3px;
+  align-items: flex-end;
   min-height: 82px;
-  margin: 0 20px 24px 20px;
+  margin: 0 auto;
+  width: 280px;
 }
 
 .form-feedback__hint {
@@ -62,7 +64,7 @@
 }
 
 .form-feedback__button {
-  width: 248px;
+  width: 280px;
 }
 
 @media (min-width: @tablet-width) {
