--- a/source/less/blocks/modal-window.less
+++ b/source/less/blocks/modal-window.less
@@ -17,11 +17,18 @@
   justify-content: flex-start;
   box-sizing: border-box;
   align-items: center;
-  padding: 45px 42px 35px 42px;
   background-color: #ffffff;
   width: auto;
   max-width: 400px;
   margin: auto;
+}
+
+.modal-window__1 {
+  padding: 45px 42px 35px 42px;
+}
+
+.modal-window__2 {
+  padding: 50px 39px 40px 37px;
 }
 
 .modal-window__title {
@@ -42,6 +49,12 @@
 
 .modal-window__button {
   width: 180px;
+  box-sizing: border-box;
+}
+
+.modal-window__button-block {
+  background-color: #f2f2f2;
+  padding: 20px;
 }
 
 @media (min-width: @tablet-width) {
