--- a/source/less/blocks/gallery-photo.less
+++ b/source/less/blocks/gallery-photo.less
@@ -101,8 +101,6 @@
 }
 
 .gallery-photo__like-icon {
-  margin: 0;
-  margin-right: 14px;
   fill: #000000;
   opacity: 0.3;
 }
@@ -111,6 +109,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  gap: 14px;
 }
 
 @media (min-width: @tablet-width) {
@@ -183,6 +182,10 @@
     max-width: 648px;
     border: none;
   }
+
+  .gallery-photo__like {
+    gap: 9px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -243,8 +246,6 @@
   }
 
   .gallery-photo__like-icon {
-    margin: 0;
-    margin-right: 14px;
     fill: #ffffff;
     opacity: 100%;
   }
