--- a/source/less/blocks/gallery-photo.less
+++ b/source/less/blocks/gallery-photo.less
@@ -186,6 +186,11 @@
   .gallery-photo__like {
     gap: 9px;
   }
+
+  .gallery-photo__like-icon {
+    fill: #000000;
+    opacity: 0.3;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -247,7 +252,7 @@
 
   .gallery-photo__like-icon {
     fill: #ffffff;
-    opacity: 100%;
+    opacity: 1;
   }
 
   .gallery-photo__intro {
