--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -89,6 +89,8 @@
 
 .advantages__icon {
   margin-right: 7px;
+  width: 40px;
+  height: 40px;
 }
 
 br {
@@ -198,5 +200,10 @@ br {
   .advantages__item--img {
     padding: 0;
     width: 800px;
+  }
+
+  .advantages__icon {
+    width: 80px;
+    height: 80px;
   }
 }
