--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -173,6 +173,7 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    flex-wrap: wrap;
     box-sizing: border-box;
     background-color: #ffffff;
   }
@@ -187,6 +188,8 @@
     min-width: 153px;
     box-shadow: none;
     background-color: #ffffff;
+    width: auto;
+    flex-grow: 1;
   }
 
   .main-nav__item:last-child {
