вносит первую часть правок

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -48,7 +48,7 @@
   &--img {
     padding: 0;
     min-width: 320px;
-    height: 260px;
+    height: auto;
     background-color: #d3d3d3;
   }
 
@@ -71,7 +71,6 @@
 }
 
 .advantages__image {
-  width: 100%;
   object-fit: cover;
 }
 
@@ -118,7 +117,7 @@ br {
   .advantages__item--img {
     min-width: 512px;
     max-width: 67%;
-    height: 256px;
+    height: auto;
   }
 
   .advantages__image {
