--- a/source/less/blocks/gallery-photo.less
+++ b/source/less/blocks/gallery-photo.less
@@ -112,6 +112,11 @@
   gap: 14px;
 }
 
+.gallery-photo__like-button {
+  border: none;
+  background-color: transparent;
+}
+
 @media (min-width: @tablet-width) {
   .gallery-photo {
     max-width: 648px;
