--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -4,14 +4,24 @@
   padding: 0;
   margin: 0;
   text-align: center;
+  color: #333333;
 
   &--align-left {
     text-align: left;
+    color: #333333;
+  }
+
+  &--back-gray {
+    color: #333333;
   }
 
   &--margin {
     margin-bottom: 32px;
     text-align: center;
+  }
+
+  &--with-img {
+    color: #ffffff;
   }
 }
 
