--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -56,7 +56,7 @@
 .form-feedback__hint {
   text-align: right;
   min-width: 280px;
-  color: rgba(51, 51, 51, 0.6);
+  color: #333333;
 }
 
 .form-feedback__separator {
