--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -9,7 +9,7 @@
 }
 
 .input__input {
-  font-family: "PT Sans", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
