--- a/source/less/blocks/video-block.less
+++ b/source/less/blocks/video-block.less
@@ -40,12 +40,21 @@
   object-fit: cover;
 }
 
-.video-block__triangle {
-  fill: #ffffff;
-  opacity: 0.7;
+.video-block__play {
   position: absolute;
   top: 62px;
   left: 116px;
+  width: 48px;
+  height: 54px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+
+.video-block__triangle {
+  fill: #ffffff;
+  opacity: 0.7;
   width: 48px;
   height: 54px;
 }
@@ -73,6 +82,12 @@
     top: 223px;
     left: 300px;
   }
+
+  .video-block__play {
+    position: absolute;
+    top: 223px;
+    left: 300px;
+  }
 }
 
 @media (min-width: @desktop-width) {
@@ -93,6 +108,12 @@
   }
 
   .video-block__triangle {
+    top: 223px;
+    left: 376px;
+  }
+
+  .video-block__play {
+    position: absolute;
     top: 223px;
     left: 376px;
   }
