--- a/source/less/blocks/input.less
+++ b/source/less/blocks/input.less
@@ -27,6 +27,16 @@
     color: rgba(0, 0, 0, 0.3);
   }
 
+  :-moz-placeholder {
+    color: #000000;
+    opacity: 1;
+  }
+
+  ::-moz-placeholder {
+    color: #000000;
+    opacity: 1;
+  }
+
   &--with-icon {
     min-width: auto;
   }
