--- a/source/less/style.less
+++ b/source/less/style.less
@@ -26,3 +26,6 @@
 @import "./blocks/contact-map.less";
 @import "./blocks/separator-horizont.less";
 @import "./blocks/modal-window.less";
+@import "./blocks/line.less";
+@import "./blocks/link.less";
+@import "./blocks/variables.less";
