--- a/source/less/blocks/choice-block.less
+++ b/source/less/blocks/choice-block.less
@@ -95,5 +95,7 @@
     justify-content: flex-start;
     align-items: center;
     min-width: auto;
+    max-width: 280px;
+    height: auto;
   }
 }
