--- a/source/less/blocks/description.less
+++ b/source/less/blocks/description.less
@@ -15,14 +15,13 @@
     color: #333333;
   }
 
-  &--margin {
-    margin-bottom: 32px;
-    text-align: center;
-  }
-
   &--with-img {
     color: #ffffff;
   }
+}
+
+.description__margin {
+  margin-bottom: 32px;
 }
 
 @media (min-width: @tablet-width) {
