--- a/source/less/blocks/form-feedback.less
+++ b/source/less/blocks/form-feedback.less
@@ -164,7 +164,7 @@
     width: 50%;
   }
 
-  .form-block--impression {
+  .form-block__impression {
     height: auto;
   }
 }
@@ -252,7 +252,7 @@
     margin: 0 45px;
   }
 
-  .form-block--impression {
+  .form-block__impression {
     max-width: 960px;
     height: auto;
   }
