--- a/source/less/blocks/modal-window.less
+++ b/source/less/blocks/modal-window.less
@@ -32,7 +32,7 @@
   margin: auto;
 }
 
-.modal__window {
+.modal-window {
   position: relative;
   top: 30%;
   display: flex;
@@ -45,7 +45,7 @@
   margin: auto;
 }
 
-.modal__window-main {
+.modal-window__main {
   padding: 50px 38px 40px 38px;
   width: 244px;
   background-color: #ffffff;
@@ -59,7 +59,7 @@
   padding: 45px 42px 35px 42px;
 }
 
-.modal__title {
+.modal-window__title {
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -67,11 +67,11 @@
   margin-bottom: 24px;
 }
 
-.modal__description {
+.modal-window__description {
   margin-bottom: 28px;
 }
 
-.modal__window-main .modal__description {
+.modal-window__main .modal-window__description {
   margin-bottom: 0;
 }
 
@@ -79,25 +79,25 @@
   display: block;
 }
 
-.modal__button {
+.modal-window__button {
   width: 100%;
   box-sizing: border-box;
 }
 
-.modal__button-block {
+.modal-window__button-block {
   background-color: #f2f2f2;
   padding: 20px;
   width: 280px;
 }
 
 @media (min-width: @tablet-width) {
-  .modal__window {
+  .modal-window {
     position: relative;
     top: 30%;
     width: 400px;
   }
 
-  .modal__title {
+  .modal-window__title {
     font-size: 30px;
     line-height: 40px;
   }
@@ -106,19 +106,19 @@
     width: 640px;
   }
 
-  .modal__window-main {
+  .modal-window__main {
     padding: 53px 98px 51px 98px;
     width: 444px;
   }
 
-  .modal__button-block {
+  .modal-window__button-block {
     padding: 44px 91px 44px 91px;
     width: 458px;
   }
 }
 
 @media (min-width: @desktop-width) {
-  .modal__window {
+  .modal-window {
     position: relative;
     top: 30%;
     width: 400px;
