--- a/source/less/blocks/social-network.less
+++ b/source/less/blocks/social-network.less
@@ -10,14 +10,16 @@
 
 .social-network__item {
   list-style-type: none;
-  padding: 12px;
-  background-color: #81b3d2;
-  fill: #ffffff;
 }
 
 .social-network__item:active {
   background-color: #549ebd;
   fill: rgba(225, 225, 255, 0.3);
+}
+
+.social-network__icon {
+  fill: #ffffff;
+  position: relative;
 }
 
 .social-network__link {
@@ -26,6 +28,8 @@
   align-items: center;
   width: 24px;
   height: 24px;
+  padding: 12px;
+  background-color: #81b3d2;
 }
 
 @media (min-width: @desktop-width) {
