--- a/source/less/blocks/title.less
+++ b/source/less/blocks/title.less
@@ -15,16 +15,16 @@
     margin-bottom: 35px;
   }
 
-  &--large {
-    font-size: 21px;
-    line-height: 26px;
-    font-weight: 700;
-    text-align: center;
-  }
-
   &--form-feedback {
     margin-bottom: 20px;
   }
+}
+
+.title__large {
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: 700;
+  text-align: center;
 }
 
 @media (min-width: @tablet-width) {
@@ -37,7 +37,7 @@
     text-align: center;
   }
 
-  .title--large {
+  .title__large {
     font-size: 30px;
     line-height: 26px;
   }
