--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -11,15 +11,15 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
-  flex-wrap: wrap;
 
-  &--gray {
+  &--number {
     background-color: #eeeeee;
     padding: 0 18px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     width: auto;
+    min-width: 320px;
   }
 
   &--icons {
@@ -49,8 +49,10 @@
   &--img {
     padding: 0;
     min-width: 320px;
-    height: auto;
+    min-height: 260px;
+    width: auto;
     background-color: #d3d3d3;
+    object-fit: cover;
   }
 
   &--icon {
@@ -60,19 +62,23 @@
     background-color: #ffffff;
   }
 
-  &--gray {
+  &--number {
     padding: 24px 0;
     background-color: #eeeeee;
     border-bottom: 1px rgba(214, 214, 214, 1) solid;
+    width: auto;
+    min-width: 320px;
   }
 
-  &--gray:last-child {
+  &--number:last-child {
     border-bottom: none;
   }
 }
 
 .advantages__image {
   object-fit: cover;
+  height: 260px;
+  width: auto;
 }
 
 .advantages__separator {
@@ -152,7 +158,7 @@ br {
     height: 80px;
   }
 
-  .advantages__list--gray {
+  .advantages__list--number {
     display: flex;
     flex-direction: row;
     padding: 0;
@@ -160,7 +166,7 @@ br {
     flex-wrap: wrap;
   }
 
-  .advantages__item--gray {
+  .advantages__item--number {
     min-width: auto;
     max-width: 33%;
     min-height: 152px;
@@ -196,7 +202,7 @@ br {
     max-width: 33%;
   }
 
-  .advantages__item--gray {
+  .advantages__item--number {
     min-width: auto;
     max-width: 33%;
     min-height: 152px;
