--- a/source/less/blocks/call-to-action.less
+++ b/source/less/blocks/call-to-action.less
@@ -14,6 +14,7 @@
 .call-to-action__description {
   margin: 0;
   margin-bottom: 32px;
+  text-align: center;
 }
 
 @media (min-width: @tablet-width) {
