--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -73,7 +73,7 @@
   position: relative;
   padding: 0;
   margin: 0;
-  z-index: 3;
+  z-index: 2;
   opacity: 0;
 }
 
@@ -84,9 +84,9 @@
   height: 22px;
   width: 23px;
   position: absolute;
-  top: 16px;
-  right: 20px;
-  z-index: 2;
+  top: 0;
+  right: 0;
+  z-index: 3;
 }
 
 .main-header__wrapper input[type="checkbox"]:checked ~ .main-nav__burger-menu {
