--- a/source/less/blocks/before-text-block.less
+++ b/source/less/blocks/before-text-block.less
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   border-bottom: 1px #e5e5e5 solid;
+  min-width: 280px;
 }
 
 .before-text-block__title {
