--- a/source/less/blocks/gallery-photo.less
+++ b/source/less/blocks/gallery-photo.less
@@ -14,6 +14,7 @@
   display: flex;
   flex-direction: column;
   border-bottom: 1px #e5e5e5 solid;
+  width: 280px;
 }
 
 .gallery-photo__title {
@@ -184,6 +185,7 @@
   .gallery-photo__intro {
     padding: 66px 95px 67px 95px;
     margin: 0;
+    width: 458px;
     max-width: 648px;
     border: none;
   }
