--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -52,7 +52,6 @@
     min-height: 260px;
     width: auto;
     background-color: #d3d3d3;
-    object-fit: cover;
   }
 
   &--icon {
@@ -78,7 +77,8 @@
 .advantages__image {
   object-fit: cover;
   height: 260px;
-  width: auto;
+  min-width: 100%;
+  vertical-align: middle;
 }
 
 .advantages__separator {
@@ -128,8 +128,10 @@ br {
   }
 
   .advantages__image {
-    width: 100%;
+    min-width: 100%;
+    height: 256px;
     object-fit: cover;
+    vertical-align: middle;
   }
 
   .advantages__item--with-img {
