--- a/source/less/blocks/video-block.less
+++ b/source/less/blocks/video-block.less
@@ -9,6 +9,7 @@
   padding-top: 17px;
   padding-bottom: 38px;
   margin: 0 20px;
+  width: 266px;
 }
 
 .video-block__title {
@@ -65,6 +66,7 @@
     padding-bottom: 65px;
     margin: 0 auto;
     max-width: 648px;
+    min-width: 455px;
   }
 
   .video-block__video {
